# JLL-Py-Utils

./: .gitignore  pyproject.toml  setup.py
docs/source/modules/: dataframes.rst  fileops.rst
jllutils/: __init__.py  atmosphere.py  checksums.py  databases.py  dataframes.py  datemath.py  display.py  fileops.py  geo.py  geography.py  interp.py  loadsave.py  matrices.py  met.py  miscutils.py  plots.py  satellites.py  stats.py  time.py  units.py  vcs.py
jllutils/subutils/: hdf5.py  leapseconds.py  ncdf.py  sat_filters.py
jllutils/tests/: test_misc_utils.py
